tests/netgen/function/junction_types/errors/junction_type_actuated_tls/random/options.netgen
--default-junction-type actuated -v --rand -o net.net.xml --rand.iterations=10
